welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: '(' expected but '{' found.
 	{ return true} else if { return false} 
                               ^sleepIn:4: error: illegal start of simple expression
}
^